--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -1,15 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-			<section name="ExorLive.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+			<section name="ExorLive.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
 		</sectionGroup>
 		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-			<section name="ExorLive.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+			<section name="ExorLive.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 		</sectionGroup>
 	</configSections>
 	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client" />
 	</startup>
 	<userSettings>
 		<ExorLive.Properties.Settings>
@@ -70,4 +70,16 @@
    </setting>
   </ExorLive.Properties.Settings>
 	</applicationSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="EO.WebBrowser" publicKeyToken="e92353a6bf73fffc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-18.2.74.0" newVersion="18.2.74.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EO.Base" publicKeyToken="e92353a6bf73fffc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-18.2.74.0" newVersion="18.2.74.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
