--- a/ExorLive.Client.WebWrapper/ExorLive.Client.WebWrapper.csproj
+++ b/ExorLive.Client.WebWrapper/ExorLive.Client.WebWrapper.csproj
@@ -39,7 +39,7 @@
     <WebPage>index.html</WebPage>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <ApplicationRevision>4</ApplicationRevision>
-    <ApplicationVersion>2.0.3.4</ApplicationVersion>
+    <ApplicationVersion>2.2.4.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
