--- a/ExorLive.Client.WebWrapper/ExorLive.Client.WebWrapper.csproj
+++ b/ExorLive.Client.WebWrapper/ExorLive.Client.WebWrapper.csproj
@@ -39,7 +39,7 @@
     <WebPage>index.html</WebPage>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <ApplicationRevision>4</ApplicationRevision>
-    <ApplicationVersion>2.2.4.%2a</ApplicationVersion>
+    <ApplicationVersion>2.2.5.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -181,6 +181,7 @@
     <Compile Include="BrowserEngines.cs" />
     <Compile Include="EoBrowser.cs" />
     <Compile Include="ExorLiveInterface.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IBrowser.cs" />
     <Compile Include="IExorLiveHost.cs" />
     <Compile Include="IExorLiveInterface.cs" />
