--- a/ExorLive.Client.WebWrapper/Properties/Settings.settings
+++ b/ExorLive.Client.WebWrapper/Properties/Settings.settings
@@ -35,13 +35,13 @@
     <Setting Name="UpdatePath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="Log" Type="System.String" Scope="Application">
+    <Setting Name="Log" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="SignonWithWindowsUser" Type="System.String" Scope="Application">
+    <Setting Name="SignonWithWindowsUser" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="RememberLoggedInUser" Type="System.String" Scope="Application">
+    <Setting Name="RememberLoggedInUser" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="CheckForUpdates" Type="System.Boolean" Scope="User">
