--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -48,7 +48,7 @@
 				<value>ExorLive</value>
 			</setting>
 			<setting name="Debug" serializeAs="String">
-				<value>False</value>
+				<value>True</value>
 			</setting>
 			<setting name="ProtocolProvider" serializeAs="String">
 				<value>ExorLive.Desktop.Arguments.Component, ExorLive.Desktop</value>
@@ -66,7 +66,7 @@
 				<value />
 			</setting>
 			<setting name="AppUrl" serializeAs="String">
-				<value>https://exorlive.com/app/</value>
+				<value>http://localhost:50000/app/</value>
 			</setting>
 		</ExorLive.Properties.Settings>
 	</applicationSettings>
