--- a/ExorLive.Client.WebWrapper/Properties/Settings.settings
+++ b/ExorLive.Client.WebWrapper/Properties/Settings.settings
@@ -12,7 +12,7 @@
       <Value Profile="(Default)">ExorLive</Value>
     </Setting>
     <Setting Name="Debug" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="Top" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
@@ -51,7 +51,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="AppUrl" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">https://exorlive.com/app/</Value>
+      <Value Profile="(Default)">http://localhost:50000/app/</Value>
     </Setting>
   </Settings>
 </SettingsFile>
