Removed a potential source of errors

--- a/ExorLive.Client.WebWrapper/Properties/Settings.settings
+++ b/ExorLive.Client.WebWrapper/Properties/Settings.settings
@@ -51,7 +51,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="AppUrl" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://localhost:50000/app/</Value>
+      <Value Profile="(Default)">https://exorlive.com/app/</Value>
     </Setting>
   </Settings>
 </SettingsFile>
