Remember zoomfactor, hide zoom when InternetExplorer mode.

--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -40,6 +40,9 @@
    <setting name="CheckForUpdates" serializeAs="String">
     <value>False</value>
    </setting>
+   <setting name="ZoomFactor" serializeAs="String">
+    <value>1</value>
+   </setting>
   </ExorLive.Properties.Settings>
 	</userSettings>
 	<applicationSettings>
