--- a/ExorLive.Client.WebWrapper/Properties/Settings.settings
+++ b/ExorLive.Client.WebWrapper/Properties/Settings.settings
@@ -53,5 +53,8 @@
     <Setting Name="AppUrl" Type="System.String" Scope="Application">
       <Value Profile="(Default)">https://exorlive.com/app/</Value>
     </Setting>
+    <Setting Name="ZoomFactor" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
