--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -1,15 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-			<section name="ExorLive.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+			<section name="ExorLive.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
 		</sectionGroup>
 		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-			<section name="ExorLive.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+			<section name="ExorLive.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
 		</sectionGroup>
 	</configSections>
 	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client" />
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
 	</startup>
 	<userSettings>
 		<ExorLive.Properties.Settings>
@@ -35,7 +35,7 @@
 				<value>False</value>
 			</setting>
 			<setting name="UpdatePath" serializeAs="String">
-				<value />
+				<value/>
 			</setting>
 			<setting name="CheckForUpdates" serializeAs="String">
 				<value>False</value>
@@ -66,7 +66,7 @@
 				<value>True</value>
 			</setting>
 			<setting name="AdfsUrl" serializeAs="String">
-				<value />
+				<value/>
 			</setting>
 			<setting name="AppUrl" serializeAs="String">
 				<value>https://exorlive.com/app/</value>
