--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -9,7 +9,7 @@
 		</sectionGroup>
 	</configSections>
 	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
 	</startup>
 	<userSettings>
 		<ExorLive.Properties.Settings>
