Attempt at handling client certificate requests.

--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -69,7 +69,7 @@
 				<value/>
 			</setting>
 			<setting name="AppUrl" serializeAs="String">
-				<value>https://exorlive.com/app/</value>
+				<value>https://sso.exorlive.com/auth/saml2/goteborg</value>
 			</setting>
 		</ExorLive.Properties.Settings>
 	</applicationSettings>
