--- a/ExorLive.Client.WebWrapper/ExorLive.Client.WebWrapper.csproj
+++ b/ExorLive.Client.WebWrapper/ExorLive.Client.WebWrapper.csproj
@@ -174,6 +174,7 @@
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Remoting" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
