IE11 compatibility registry fix.

--- a/ExorLive.Client.WebWrapper/App.Goteborg.config
+++ b/ExorLive.Client.WebWrapper/App.Goteborg.config
@@ -5,6 +5,9 @@
 			<setting name="UpdatePath" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">goteborg</value>
 			</setting>
+			<setting name="BrowserEngine" serializeAs="String">
+				<value xdt:Transform="Replace">InternetExplorer</value>
+			</setting>
 		</ExorLive.Properties.Settings>
 	</userSettings>
 	<applicationSettings>
