--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -14,7 +14,7 @@
 	<userSettings>
 		<ExorLive.Properties.Settings>
 			<setting name="BrowserEngine" serializeAs="String">
-				<value>EoWebBrowser</value>
+				<value>InternetExplorer</value>
 			</setting>
 			<setting name="MinimizeOnExit" serializeAs="String">
 				<value>True</value>
