New release for Goteborg.

--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -14,7 +14,7 @@
 	<userSettings>
 		<ExorLive.Properties.Settings>
 			<setting name="BrowserEngine" serializeAs="String">
-				<value>InternetExplorer</value>
+				<value>EoWebBrowser</value>
 			</setting>
 			<setting name="MinimizeOnExit" serializeAs="String">
 				<value>True</value>
@@ -35,10 +35,10 @@
 				<value>False</value>
 			</setting>
 			<setting name="UpdatePath" serializeAs="String">
-				<value/>
+				<value />
 			</setting>
 			<setting name="CheckForUpdates" serializeAs="String">
-				<value>False</value>
+				<value>True</value>
 			</setting>
 			<setting name="ZoomFactor" serializeAs="String">
 				<value>1</value>
@@ -66,10 +66,10 @@
 				<value>True</value>
 			</setting>
 			<setting name="AdfsUrl" serializeAs="String">
-				<value/>
+				<value />
 			</setting>
 			<setting name="AppUrl" serializeAs="String">
-				<value>https://sso.exorlive.com/auth/saml2/goteborg</value>
+				<value>https://exorlive.com/app/</value>
 			</setting>
 		</ExorLive.Properties.Settings>
 	</applicationSettings>
