--- a/ExorLive.Client.WebWrapper/Properties/Settings.settings
+++ b/ExorLive.Client.WebWrapper/Properties/Settings.settings
@@ -45,7 +45,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="CheckForUpdates" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="AdfsUrl" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
