--- a/ExorLive.Client.WebWrapper/App.Uppsala.config
+++ b/ExorLive.Client.WebWrapper/App.Uppsala.config
@@ -6,7 +6,7 @@
 				<value xdt:Transform="Replace">True</value>
 			</setting>
 			<setting name="UpdatePath" xdt:Locator="Match(name)">
-				<value xdt:Transform="Replace">goteborg</value>
+				<value xdt:Transform="Replace">uppsala</value>
 			</setting>
 		</ExorLive.Properties.Settings>
 	</userSettings>
@@ -16,7 +16,7 @@
 				<value xdt:Transform="Replace">False</value>
 			</setting>
 			<setting name="AppUrl" xdt:Locator="Match(name)">
-				<value xdt:Transform="Replace">https://sso.exorlive.com/auth/saml2/goteborg/</value>
+				<value xdt:Transform="Replace">https://sso.exorlive.com/auth/wsfed/uppsala/</value>
 			</setting>
 			<setting name="RememberLoggedInUser" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">False</value>
