--- a/WebWrapper.WebViewBrowser/WebWrapper.WebViewBrowser.csproj
+++ b/WebWrapper.WebViewBrowser/WebWrapper.WebViewBrowser.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WebWrapper</RootNamespace>
-    <AssemblyName>WebView2</AssemblyName>
+    <AssemblyName>WebViewBrowser</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>false</Deterministic>
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WebView2.cs" />
+    <Compile Include="WebViewBrowser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
