--- a/WebWrapper.EoBrowser/WebWrapper.EoBrowser.csproj
+++ b/WebWrapper.EoBrowser/WebWrapper.EoBrowser.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="EoBrowser.cs" />
     <Compile Include="EoBrowserObject.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
