Updated to .net 4.5.2.
Minimum required version for WebView2 is .Net 4.5.

--- a/ExorLive.Client.WebWrapper/Properties/Settings.settings
+++ b/ExorLive.Client.WebWrapper/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="BrowserEngine" Type="ExorLive.Client.WebWrapper.BrowserEngines" Scope="User">
-      <Value Profile="(Default)">EoWebBrowser</Value>
+      <Value Profile="(Default)">WebViewBrowser</Value>
     </Setting>
     <Setting Name="MinimizeOnExit" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
