--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -9,12 +9,12 @@
 		</sectionGroup>
 	</configSections>
 	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
 	</startup>
 	<userSettings>
 		<ExorLive.Properties.Settings>
 			<setting name="BrowserEngine" serializeAs="String">
-				<value>EoWebBrowser</value>
+				<value>WebViewBrowser</value>
 			</setting>
 			<setting name="MinimizeOnExit" serializeAs="String">
 				<value>True</value>
@@ -35,7 +35,7 @@
 				<value>False</value>
 			</setting>
 			<setting name="UpdatePath" serializeAs="String">
-				<value />
+				<value/>
 			</setting>
 			<setting name="CheckForUpdates" serializeAs="String">
 				<value>True</value>
@@ -66,7 +66,7 @@
 				<value>True</value>
 			</setting>
 			<setting name="AdfsUrl" serializeAs="String">
-				<value />
+				<value/>
 			</setting>
 			<setting name="AppUrl" serializeAs="String">
 				<value>https://exorlive.com/app/</value>
