--- a/ExorLive.Client.WebWrapper/Properties/Settings.settings
+++ b/ExorLive.Client.WebWrapper/Properties/Settings.settings
@@ -45,13 +45,13 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="CheckForUpdates" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="AdfsUrl" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="AppUrl" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">https://exorlive.com/app/</Value>
+      <Value Profile="(Default)">http://localhost:50000/app/</Value>
     </Setting>
     <Setting Name="ZoomFactor" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">1</Value>
