Changed env. Set browser userdata folder.

--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -38,7 +38,7 @@
     <value />
    </setting>
    <setting name="CheckForUpdates" serializeAs="String">
-    <value>False</value>
+    <value>True</value>
    </setting>
    <setting name="ZoomFactor" serializeAs="String">
     <value>1</value>
@@ -69,7 +69,7 @@
     <value />
    </setting>
    <setting name="AppUrl" serializeAs="String">
-    <value>http://localhost:50000/app/</value>
+    <value>https://exorlive.com/app/</value>
    </setting>
   </ExorLive.Properties.Settings>
 	</applicationSettings>
