Updated VGR config.

--- a/ExorLive.Client.WebWrapper/App.VGR.config
+++ b/ExorLive.Client.WebWrapper/App.VGR.config
@@ -8,6 +8,9 @@
 			<setting name="UpdatePath" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">vgr</value>
 			</setting>
+			<setting name="BrowserEngine" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">WebViewBrowser</value>
+			</setting>
 		</ExorLive.Properties.Settings>
 	</userSettings>
 	<applicationSettings>
@@ -26,6 +29,9 @@
 			</setting>
 			<setting name="AdfsUrl" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">https://adfs.exorlive.com/?name=vgr</value>
+			</setting>
+			<setting name="Debug" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">False</value>
 			</setting>
 		</ExorLive.Properties.Settings>
 	</applicationSettings>
